sidebar is fixed / album images collapse vertically to native height

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+#root {
+  width: 100%;
+}
 /* Albums styling */
 .albums-container {
   display: flex;
@@ -53,9 +56,8 @@
 
 .album-container {
   display: flex;
+  /* width: 100%; */
 }
-
-
 
 .sidebar a {
   text-decoration: none;
@@ -69,7 +71,10 @@
 }
 
 .album-container-right {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-width: 100%;
+  margin-left: 300px;
   background-color: rgb(232, 232, 232);
 }
 
@@ -80,11 +85,11 @@
 
 .album-images {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  flex-direction: column;
+  /* justify-content: flex-start; */
   flex-wrap: wrap;
   /* width: 100%; */
-  min-height: 800px;
+  max-height: 1000px;
   background-color: rgb(232, 232, 232);
 }
 
@@ -96,8 +101,9 @@
 .images-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   /* height: 350px; */
+  width: 100%;
   margin: 10px;
   padding: 10px;
   /* background-color: orange; */
@@ -163,6 +169,8 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  position: fixed;
+  z-index: 10;
   width: 300px;
   height: 100%;
   align-items: center;
